--- a/.github/actions/build-maven/action.yml
+++ b/.github/actions/build-maven/action.yml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - main
+      - master
   pull_request:
     branches:
       - main
-
+      - master
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
