--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,7 +12,7 @@ jobs:
         - name: Checkout Code
           uses: actions/checkout@v3
         
-        - name: Build Java App
+        - name: Build maven
           uses: ./.github/actions/build-maven
           with:
             version: 17
