--- a/.github/actions/build-maven/action.yml
+++ b/.github/actions/build-maven/action.yml
@@ -1,30 +1,19 @@
-name: CI/CD Maven App
+name: 'Build Maven Action'
+description: 'Build and test a Maven project'
 
-on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
-jobs:
-  build-and-test:
-    runs-on: ubuntu
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+runs:
+  using: 'composite'
+  steps:
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: maven
+    - name: Build with Maven
+      run: mvn clean package -DskipTests=true
+      shell: bash
 
-      - name: Build with Maven
-        run: mvn clean package -DskipTests=true
-
-      - name: Run unit tests
-        run: mvn test
+    - name: Run unit tests
+      run: mvn test
+      shell: bash
