--- a/.github/actions/build-maven/action.yml
+++ b/.github/actions/build-maven/action.yml
@@ -4,8 +4,8 @@ description: 'Build and test a Maven project'
 runs:
   using: 'composite'
   steps:
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Set up Java
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '17'
